--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -12,5 +12,5 @@
     Take a look at the <code>app/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
-  <button block [navPush]="pushPage">Are you eligible to donate blood?</button>
+  <button block (click)="quizPush()">Are you eligible to donate blood?</button>
 </ion-content>
