Add theming and Quiz result

--- a/app/pages/about/about.html
+++ b/app/pages/about/about.html
@@ -1,9 +1,10 @@
 
-<ion-navbar *navbar>
+<ion-navbar *navbar primary>
   <ion-title>
     About
   </ion-title>
 </ion-navbar>
 
 <ion-content padding class="about">
+  
 </ion-content>
