--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,9 +1,9 @@
-<ion-navbar *navbar>
+<ion-navbar *navbar primary>
   <ion-title>Home</ion-title>
 </ion-navbar>
 
 <ion-content padding class="home">
-  <h2>Welcome to Ionic!</h2>
+  <h2>Welcome to A Blood Donation App</h2>
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
@@ -12,5 +12,6 @@
     Take a look at the <code>app/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+  <a href="http://google.com" target="_blank">Test</a>
   <button block (click)="quizPush()">Are you eligible to donate blood?</button>
 </ion-content>
