--- a/app/pages/quiz/quiz.html
+++ b/app/pages/quiz/quiz.html
@@ -1,5 +1,5 @@
 
-<ion-navbar *navbar>
+<ion-navbar *navbar primary>
   <ion-title>
     Question {{id + 1}}
   </ion-title>
@@ -7,7 +7,7 @@
 
 <ion-content padding class="quiz">
   <h1>{{questions[id].question}}</h1>
-  <button block>Yes</button>
-  <button block (click)="nextQuestion()">No</button>
-  <button block>More Info About This Question</button>
+  <button (click)="goToQuizResultFail()">Yes</button>
+  <button (click)="nextQuestion()">No</button>
+  <a href="{{questions[id].moreinfo}}" target="_blank"><button block>More Info About This Question</button></a>
 </ion-content>
