Remove about page and add map page

--- a/app/pages/map/map.html
+++ b/app/pages/map/map.html
@@ -1,10 +1,10 @@
 
 <ion-navbar *navbar primary>
   <ion-title>
-    About
+    Map
   </ion-title>
 </ion-navbar>
 
-<ion-content padding class="about">
-  
+<ion-content padding class="map">
+  <h1>WORK IN PROGRESS</h1>
 </ion-content>
