--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs primary>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Map" tabIcon="map"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Date" tabIcon="calendar"></ion-tab>
 </ion-tabs>
