Allow users to go back to the HomePage from QuizResultPage

--- a/app/pages/quiz-result/quiz-result.html
+++ b/app/pages/quiz-result/quiz-result.html
@@ -17,4 +17,5 @@
   <h3>{{responses[id].title}}</h3>
   <p>{{responses[id].response}}</p>
 <a href="{{responses[id].moreinfo}}" target="_blank"><button block>More Info</button></a>
+<button block (click)="backToRoot()">Go Home</button>
 </ion-content>
