--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,6 +1,8 @@
-<ion-navbar *navbar primary>
-  <ion-title>Home</ion-title>
-</ion-navbar>
+<ion-header>
+  <ion-navbar primary>
+    <ion-title>Home</ion-title>
+  </ion-navbar>
+</ion-header>
 
 <ion-content padding class="home">
   <h2>Welcome to A Blood Donation App</h2>
