--- a/app/pages/map/map.html
+++ b/app/pages/map/map.html
@@ -1,10 +1,8 @@
-
-<ion-navbar *navbar primary>
-  <ion-title>
-    Map
-  </ion-title>
-</ion-navbar>
-
+<ion-header>
+  <ion-navbar primary>
+    <ion-title>Map</ion-title>
+  </ion-navbar>
+</ion-header>
 <ion-content padding class="map">
   <h1>WORK IN PROGRESS</h1>
 </ion-content>
