--- a/app/pages/quiz/quiz.html
+++ b/app/pages/quiz/quiz.html
@@ -1,9 +1,8 @@
-
-<ion-navbar *navbar primary>
-  <ion-title>
-    Question {{id + 1}}
-  </ion-title>
-</ion-navbar>
+<ion-header>
+  <ion-navbar primary>
+    <ion-title>Question {{id + 1}}</ion-title>
+  </ion-navbar>
+</ion-header>
 
 <ion-content padding class="quiz">
   <h1>{{questions[id].question}}</h1>
