--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <ion-app></ion-app>
-  <script src="//maps.google.com/maps/api/js?key=AIzaSyD7ECJj7a0Fpwj4JvLzCj9ZR5PMqY3jH50&libraries=places"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyD7ECJj7a0Fpwj4JvLzCj9ZR5PMqY3jH50&libraries=places"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
