Add Google Places Search to MapPage

--- a/app/pages/map/map.html
+++ b/app/pages/map/map.html
@@ -4,10 +4,7 @@
     <button (click)="loadMap()">
       <ion-icon name="map"></ion-icon>
     </button>
-    <button (click)="addMarker()">
-      <ion-icon name="pin"></ion-icon>
-    </button>
-    <button (click)="saveLocation()">
+    <button (click)="searchPlaces()">
       <ion-icon name="compass"></ion-icon>
     </button>
   </ion-buttons>
