Add Firebase Authentication

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -7,4 +7,14 @@
 <ion-content padding class="home">
   <h2>Welcome to A Blood Donation App</h2>
   <button block (click)="quizPush()">Are you eligible to donate blood?</button>
+  <button block (click)="getFData()">Display the items</button>
+  <button block (click)="LoginPush()">Login</button>
+  <button block (click)="SignupPush()">Sign Up</button>
+  <ion-card  *ngFor="let item of items | async">
+                <ion-card-header>Header:
+                    {{item.name}}
+                </ion-card-header>
+                <ion-card-content>
+                </ion-card-content>
+  </ion-card>
 </ion-content>
