--- a/app/pages/map/map.html
+++ b/app/pages/map/map.html
@@ -4,5 +4,6 @@
   </ion-navbar>
 </ion-header>
 <ion-content class="map">
+  <h1 *ngIf="loadBool" text-center id="load">Loading...</h1>
   <div id="map"></div>
 </ion-content>
