--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -1,25 +1,22 @@
 <ion-header>
-
-  <ion-navbar>
+  <ion-navbar primary>
     <ion-title>Login</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-  <h1>User Login</h1>
-              <form  #loginCreds="ngForm" (ngSubmit)="login(loginCreds.value)">
+              <form  #loginCreds="ngForm">
               <ion-item>
-                  <ion-label>Email</ion-label>
+                  <ion-label floating>Email</ion-label>
                   <ion-input type="text" ngControl="email"></ion-input>
               </ion-item>
               <ion-item>
-                  <ion-label>Password</ion-label>
+                  <ion-label floating>Password</ion-label>
                   <ion-input type="password" ngControl="password"></ion-input>
               </ion-item>
               <div padding>
-                  <button block type="submit">Login</button>
+                  <button block (click)="login(loginCreds.value)">Login</button>
+                  <button block (click)="signup(loginCreds.value)">Sign Up</button>
               </div>
               <div padding>
                   <p *ngIf="error" class="error">Error:&nbsp;{{ error.message }}</p>
