--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -12,21 +12,32 @@
 <ion-content padding class="home">
   <h2 text-center>Welcome to BloodApp</h2>
   <button block (click)="getFData()">Display the items</button>
-  <ion-card  *ngFor="let item of items | async">
-                <ion-card-header>Header:
-                    {{item.name}}
-                </ion-card-header>
-                <ion-card-content>
-                </ion-card-content>
-              </ion-card>
+  <button block (click)="setElig(true)">Set eligibility to true</button>
+  <button block (click)="setElig(false)">Set eligibility to false</button>
+  <div *ngFor="let item of items | async">
+    <ion-card *ngIf="item.canDonate">
+      <ion-card-title padding>
+        Congratulations you can donate blood!!!
+      </ion-card-title>
+      <ion-card-content>
+        <p>Go to the Map tab at the top to see where you can donate.</p>
+      </ion-card-content>
+    </ion-card>
+    <ion-card *ngIf="!item.canDonate">
+      <ion-card-title padding>
+        Sorry, you cannot donate blood
+      </ion-card-title>
+      <ion-card-content>
+        <p></p>
+      </ion-card-content>
+    </ion-card>
+  </div>
   <ion-card>
     <ion-card-content>
     <ion-card-title>
       Can You Donate Blood?
-      </ion-card-title>
-    <p>
-      See if you're eligible to donate blood.
-    </p>
+    </ion-card-title>
+    <p>See if you're eligible to donate blood.</p>
   </ion-card-content>
   <ion-row no-padding>
       <ion-col>
