Update to ionic beta 11

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -17,7 +17,7 @@
         Congratulations you can donate blood!!!
       </ion-card-title>
       <ion-card-content>
-        <p>Go to the Map tab at the top to see where you can donate.</p>
+        <p>Go to the Map tab to see where you can donate.</p>
       </ion-card-content>
     </ion-card>
     <ion-card *ngIf="!item.canDonate">
