--- a/app/pages/quiz/quiz.html
+++ b/app/pages/quiz/quiz.html
@@ -6,7 +6,17 @@
 
 <ion-content padding class="quiz">
   <h1>{{questions[id].question}}</h1>
-  <button (click)="goToQuizResultFail()">Yes</button>
-  <button (click)="nextQuestion()">No</button>
-  <a href="{{questions[id].moreinfo}}" target="_blank"><button block>More Info About This Question</button></a>
+  <ion-row>
+    <ion-col width-50>
+      <button block (click)="goToQuizResultFail()">Yes</button>
+    </ion-col>
+    <ion-col width-50>
+      <button block (click)="nextQuestion()">No</button>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col width-100>
+      <a href="{{questions[id].moreinfo}}" target="_blank"><button block>More Info About This Question</button></a>
+    </ion-col>
+  </ion-row>
 </ion-content>
