--- a/app/pages/settings/settings.html
+++ b/app/pages/settings/settings.html
@@ -33,6 +33,19 @@
     </ion-col>
   </ion-row>
   <ion-row>
+    <ion-col width-50>
+      <button block (click)="setMapMode('native')" [disabled]="mapType == 'native'">
+        Native Map
+      </button>
+    </ion-col>
+    <ion-col width-50>
+      <button block (click)="setMapMode('js')" [disabled]="mapType == 'js'">
+        JS Map
+      </button>
+    </ion-col>
+  </ion-row>
+  <p>Please restart the app after setting the mode of the map.</p>
+  <ion-row>
     <ion-col width-25>Progress:</ion-col>
     <ion-col width-75>
       {{downloadProgress?.receivedBytes}} / {{downloadProgress?.totalBytes}}
