Changes to DatePage

--- a/app/pages/date/date.html
+++ b/app/pages/date/date.html
@@ -11,11 +11,11 @@
     <ion-list-header>Type and Date of Donation</ion-list-header>
     <ion-item>
       <ion-label>Whole Blood</ion-label>
-      <ion-radio value="whole"></ion-radio>
+      <ion-radio value="12"></ion-radio>
     </ion-item>
     <ion-item>
       <ion-label>Plasma and Platelet</ion-label>
-      <ion-radio value="other"></ion-radio>
+      <ion-radio value="2"></ion-radio>
     </ion-item>
     <ion-item>
       <ion-label>Date of Donation</ion-label>
