Change wording in DatePage

--- a/app/pages/date/date.html
+++ b/app/pages/date/date.html
@@ -23,5 +23,5 @@
     </ion-item>
   </ion-list>
   <button (click)="getNextDate()" block>See when you can donate next</button>
-  <p> You can donate on: {{nextDate}}</p>
+  <p> You can donate again on: {{nextDate}}</p>
 </ion-content>
