Change name to Pocket Blood and version to 1.0.4

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content padding class="home">
-  <h2 text-center>Welcome to Blood App</h2>
+  <h2 text-center>Welcome to Pocket Blood</h2>
   <div *ngFor="let item of items | async">
     <ion-card *ngIf="item.canDonate">
       <ion-card-title padding>
