--- a/app/pages/date/date.html
+++ b/app/pages/date/date.html
@@ -22,6 +22,7 @@
       <ion-datetime displayFormat="DDDD, D MMMM YYYY" pickerFormat="D MMMM YYYY" [(ngModel)]="inputDate"></ion-datetime>
     </ion-item>
   </ion-list>
-  <button (click)="getNextDate()" block>See when you can donate next</button>
-  <p> You can donate again on: {{nextDate}}</p>
+  <button (click)="getNextDate()" block>See when you are eligible to donate again</button>
+  <a *ngIf="nextDate == 'Today'" target="_blank" href="https://www.donateblood.com.au/make-appointment"><button block>Make an Appointment</button></a>
+  <p>You are eligible to donate again on: {{nextDate}}</p>
 </ion-content>
