--- a/app/pages/quiz-result/quiz-result.html
+++ b/app/pages/quiz-result/quiz-result.html
@@ -8,5 +8,6 @@
   <h3>{{responses[id].title}}</h3>
   <p>{{responses[id].response}}</p>
   <a href="{{responses[id].moreinfo}}" target="_blank"><button block>More Info</button></a>
+  <a *ngIf="id == 11" target="_blank" href="https://www.donateblood.com.au/make-appointment"><button block>Make an Appointment</button></a>
   <button block (click)="backToRoot()">Go Home</button>
 </ion-content>
